# keygen

./: .gitignore  .pylintrc  LICENSE  README.md  TODO.md  key_manager.py  keygen.py  log.py  main.py  model.py  pyproject.toml  requirements.txt  software.py  software_key.py  test_model.py  test_win95_key_manager.py
logging_configs/: config.json
src/: key_manager.py  keygen.py
tests/: test_win95_key_manager.py
